--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "feb_project",
-  "version": "0.1.0",
+  "name": "snapshot-application",
+  "version": "2.4.0",
   "private": true,
   "dependencies": {
     "@react-native-clipboard/clipboard": "^1.11.2",
